--- a/styles.css
+++ b/styles.css
@@ -43,8 +43,10 @@ li {
 .container-1 {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: stretch;
     width: 100%;
+    height: 300px;
+    flex: 1;
 }
 
 .left {
@@ -53,11 +55,14 @@ li {
     align-items: flex-start;
     width: 50%;
     gap: 16px;
+    border: 1px solid red;
+    height: 100%;
 }
 
 .right{
     display: flex;
     width: 49%;
+    height: 100%;
 }
 
 .heroText {
@@ -73,4 +78,5 @@ li {
 
 .right > img {
 width: 100%;
+object-fit: cover;
 }
