--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,14 @@
 
 body {
     margin: auto;
-    width: 50vw;
     font-family: "Roboto";
-    background: #1F2937;
+    background-color: #1F2937;
 }
 
 .section-1 {
-    background: #1F2937;
+    background-color: #1F2937;
+    margin: auto;
+    width: 50vw;
 }
 
 .header {
@@ -35,9 +36,9 @@ ul {
 
 li {
     display: inline-block;
-    color:#E5E7EB;
     font-size: 18px;
     padding: 10px;
+    color:#E5E7EB;
 }
 
 .container-1 {
@@ -55,7 +56,6 @@ li {
     align-items: flex-start;
     width: 50%;
     gap: 16px;
-    border: 1px solid red;
     height: 100%;
 }
 
@@ -79,4 +79,46 @@ li {
 .right > img {
 width: 100%;
 object-fit: cover;
+}
+
+
+.informationHeader {
+    background-color:#F9FAF8;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+    text-align: center;
+    width: 50vw;
+    
+}
+
+.section-2{
+    background-color:#F9FAF8;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.image-container {
+    display: flex;
+    gap: 40px;
+    height: 500px;
+}
+
+.image {
+    border-radius: 20px;
+    height: 200px;
+    width: 200px;
+    border: 3px solid #3882F6;
+    display: flex;
+    flex-direction: column;
+}
+
+.caption {
+    margin-top: 200px;
+    padding-top: 16px;
+    text-align: center;
+    color:#585858;
+    
 }
