--- a/styles.css
+++ b/styles.css
@@ -87,9 +87,7 @@ object-fit: cover;
     font-size: 36px;
     color: #1F2937;
     font-weight: 900;
-    text-align: center;
-    width: 50vw;
-    
+    text-align: center;    
 }
 
 .section-2{
@@ -103,7 +101,7 @@ object-fit: cover;
 .image-container {
     display: flex;
     gap: 40px;
-    height: 500px;
+    height: 300px;
 }
 
 .image {
@@ -121,4 +119,68 @@ object-fit: cover;
     text-align: center;
     color:#585858;
     
+}
+
+.section-3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    background-color: #E5E7EB;
+}
+
+.quote {
+    margin: auto;
+    width: 50vw;
+    font-size: 36px;
+    font-style: italic;
+}
+
+.author {
+    font-weight: 700;
+    width: 50%;
+    align-self: flex-end;
+    text-align: right;
+    margin-right: 30px;
+}
+
+.container-2 {
+    display: flex;
+    flex-direction: column;
+}
+
+.section-4 {
+    background-color: #F9FAF8;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.modal {
+    display: flex;
+    background-color:#3882F6;
+    padding: 30px;
+    width: 50vw;
+    margin: auto;
+    justify-content: space-between;
+}
+
+.call-to-action{
+    display: flex;
+    flex-direction: column;
+}
+
+.call-to-action-heading {
+    color:#F9FAF8;
+}
+
+.call-to-action-info {
+    color: #E5E7EB;
+}
+
+.btn {
+    background-color: #3882F6;
+    color: #E5E7EB;
 }
