--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,7 @@ li {
 
 .right > img {
 width: 100%;
+max-height: 200px;
 object-fit: cover;
 }
 
@@ -87,7 +88,8 @@ object-fit: cover;
     font-size: 36px;
     color: #1F2937;
     font-weight: 900;
-    text-align: center;    
+    text-align: center;   
+    padding: 30px;
 }
 
 .section-2{
@@ -102,6 +104,7 @@ object-fit: cover;
     display: flex;
     gap: 40px;
     height: 300px;
+    margin-bottom: 50px;
 }
 
 .image {
@@ -147,6 +150,7 @@ object-fit: cover;
 .container-2 {
     display: flex;
     flex-direction: column;
+    padding: 100px;
 }
 
 .section-4 {
@@ -183,10 +187,6 @@ object-fit: cover;
     color: #e5e7eba6;
 }
 
-.btn {
-    background-color: #3882F6;
-    color: #E5E7EB;
-}
 
 .footer {
     display: flex;
@@ -194,4 +194,27 @@ object-fit: cover;
     align-items: center;
     padding: 30px;
     color: #F9FAF8;
+}
+
+.btn-1 {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 7px;
+    font-weight: 700;
+}
+
+.btn-2{
+    background-color: #3882F6;
+    color: #F9FAF8;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 7px;
+    font-weight: 700;
+    border: 1px solid #F9FAF8;
 }
